@@ -1,5 +1,9 @@
 2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub.d/00_header.in: Don't use LANG unless unifont is available.
+
+2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Output errors if theme loading failed.
 
 	* grub-core/gfxmenu/gfxmenu.c (grub_gfxmenu_try): Move the call to
